--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
           <li>Reading</li>
           <li>Travel</li>
         </ul>
+
+        <h2>References</h2>
+        <ul>
+          <li>Mr. John Doe, Software Developer, Sainsbury's</li>
+          <li>Mr. Jane Doe, Software Developer, Sainsbury's</li>
+        </ul>
+
+        <h2>Personal Statement</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          voluptates, quae, quod, voluptate quibusdam voluptatem quidem
+          voluptatum quos quia quas voluptas. Quisquam, quae. Quisquam, quae.
+          Quisquam, quae. Quisquam, quae.
+        </p>
       </div>
     </div>
   </body>
